[package]
name = "sigrs"
version = "0.2.0"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "Interactive grep (for streaming)"
repository = "https://github.com/ynqa/sig"
license = "MIT"
readme = "README.md"

[[bin]]
name = "sig"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
futures = "0.3.31"
futures-timer = "3.0.3"
grep = "0.3.2"
promkit = "0.7.0"
rayon = "1.5.0"
regex = "1.11.1"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.11"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
