[package]
name = "sigrs"
version = "0.1.4"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "Interactive grep (for streaming)"
repository = "https://github.com/ynqa/sig"
license = "MIT"
readme = "README.md"

[[bin]]
name = "sig"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
futures-timer = "3.0.3"
grep = "0.3.1"
promkit = "0.5.1"
rayon = "1.5.0"
regex = "1.10.4"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
